<resources>
    <string name="app_name">Inkan</string>
    <string name="title_form_login">Form Login</string>
    <string name="title_form_registrasi">Form Registrasi</string>
    <string name="username_text"> Username</string>
    <string name="useremail_text"> Email</string>
    <string name="password_text"> Password</string>
    <string name="daftar_text">Daftar</string>
    <string name="punya_akun_text">Sudah punya akun? Login disini</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Pengaturan</string>
    <string name="action_logout">Keluar</string>
    <string name="username_account">Fadhil Yori</string>
    <string name="useremail_account">fadhilyori12@outlook.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="provinsi">
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
    </string-array>
    <string-array name="kota">
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Semarang</item>
    </string-array>
    <string-array name="kecamatan">
        <item>Rungkut</item>
        <item>Wonokromo</item>
        <item>Sukolilo</item>
    </string-array>
</resources>
