<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:background="@drawable/batu"
    tools:context="com.apps.inkan.DaftarActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="#bfff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_form_registrasi" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/pesan"
                android:hint="@string/useremail_text" />

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/orang"
                android:hint="@string/username_text" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/gembok"
                android:hint="@string/password_text" />

        <Button
            android:id="@+id/btnDaftarLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#2776d1"
            android:text="@string/daftar_text"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#2776d1"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="14sp"
            android:text="@string/punya_akun_text" />

    </LinearLayout>
</LinearLayout>
